--- a/index.html
+++ b/index.html
@@ -3,36 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Game Vault</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- Option 1: Include in HTML -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 
 <body class="bg-dark">
-    <header>
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark border-bottom border-light">
-            <div class="container d-flex justify-content-between align-items-center">
-                <a class="navbar-brand" href="#">Game Library</a>
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Games</a></li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-light" type="submit">Search</button>
-                </form>
+    <div class="main-wrapper">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark mb-4 sticky-top">
+                <div class="container d-flex justify-content-between align-items-center">
+                    <a class="navbar-brand" href="#">
+                        <img src="images/game-vault-header.png" alt="Game Vault Logo" class="img-fluid header-img">
+                    </a>
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white fw-bold" href="#">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white fw-bold" href="#" id="categoriesDropdown"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-list-task"></i> Categories
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="categoriesDropdown">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">RPG</a></li>
+                                <li><a class="dropdown-item" href="#">Strategy</a></li>
+                                <li><a class="dropdown-item" href="#">Sports</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-light" type="submit">Search</button>
+                    </form>
+                </div>
+            </nav>
+        </header>
+
+
+        <main>
+            <div class="container-fluid p-0">
+                <div class="hero p-5 border-bottom border-white">
+                    <div class="hero-content text-center text-white">
+                        <img src="images/game-vault-hero.png" class="img-fluid hero-img" alt="">
+                        <p class="lead">Your ultimate destination for finding the best games</p>
+                    </div>
+                </div>
+                <div class="container my-5">
+                    <h2 class="text-white mb-4">Featured Games</h2>
+                    <div class="row g-4">
+                        <div class="col-md-4">
+                            <div class="card bg-secondary text-white h-100">
+                                <img src="images/game1.jpg" class="card-img-top" alt="Game 1">
+                                <div class="card-body">
+                                    <h5 class="card-title">Epic Adventure</h5>
+                                    <p class="card-text">Embark on an epic journey through mystical lands and face
+                                        formidable foes.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </nav>
-    </header>
+        </main>
 
-    <main>
-        
-    </main>
+        <footer class="footer">
+            <p>&copy; 2025 Cas Website</p>
+        </footer>
 
-    <footer>
-        <p>&copy; 2025 Cas Website</p>
-    </footer>
+    </div><!-- /.main-wrapper -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
