--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
                 <div class="container d-flex justify-content-between align-items-center">
-                    <a class="navbar-brand" href="#">
-                        <img src="images/game-vault-header.png" alt="Game Vault Logo" class="img-fluid header-img">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="/images/game-vault-header.png" alt="Game Vault Logo" class="img-fluid header-img">
                     </a>
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item">
-                            <a class="nav-link active text-white fw-bold" href="#"><i class="bi bi-house-fill me-1"></i> Home</a>
+                            <a class="nav-link active text-white fw-bold" href="index.html"><i class="bi bi-house-fill me-1"></i> Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white fw-bold" href="#" id="categoriesDropdown"
