Added a missing link

--- a/html/game.html
+++ b/html/game.html
@@ -63,6 +63,7 @@
     <script src="../js/search.js"></script>
     
     <script src="../js/category.js"></script>
+    <script src="../js/game.js"></script>
 </body>
 
 </html>
