Massive update just have to add more games.

--- a/html/rpg.html
+++ b/html/rpg.html
@@ -15,35 +15,54 @@
 
 <body class="bg-dark">
     <header>
+        
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-            <div class="container d-flex justify-content-between align-items-center">
-                <a class="navbar-brand" href="../index.html">
-                    <img src="../images/game-vault-header.png" alt="Game Vault Logo" class="img-fluid header-img">
-                </a>
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active text-white fw-bold" href="../index.html"><i
-                                class="bi bi-house-fill me-1"></i> Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white fw-bold" href="#" id="categoriesDropdown"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-list-task"></i> Categories
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="categoriesDropdown">
-                            <li><a class="dropdown-item" href="../html/action.html">Action</a></li>
-                            <li><a class="dropdown-item" href="../html/rpg.html">RPG</a></li>
-                            <li><a class="dropdown-item" href="../html/strategy.html">Strategy</a></li>
-                            <li><a class="dropdown-item" href="../html/sports.html">Sports</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-light" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
+                <div class="container d-flex justify-content-between align-items-center">
+                    <a class="navbar-brand" href="../index.html">
+                        <img src="../images/game-vault-header.png" alt="Game Vault Logo" class="img-fluid header-img">
+                    </a>
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold" href="../index.html"><i class="bi bi-house-fill me-1"></i> Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white fw-bold" href="#" id="categoriesDropdown"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-list-task"></i> Categories
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="categoriesDropdown">
+                                <li><a class="dropdown-item" href="../html/action.html">Action</a></li>
+                                <li><a class="dropdown-item" href="../html/rpg.html">RPG</a></li>
+                                <li><a class="dropdown-item" href="../html/strategy.html">Strategy</a></li>
+                                <li><a class="dropdown-item" href="../html/sports.html">Sports</a></li>
+                                <li><a class="dropdown-item" href="../html/racing.html">Racing</a></li>
+                                <li><a class="dropdown-item" href="../html/adventure.html">Adventure</a></li>
+                                <li><a class="dropdown-item" href="../html/shooter.html">Shooter</a></li>
+                                <li><a class="dropdown-item" href="../html/puzzle.html">Puzzle</a></li>
+                                <li><a class="dropdown-item" href="../html/casual-party.html">Casual/Party</a></li>
+                                <li><a class="dropdown-item" href="../html/simulation-strategy.html">Simulation/Strategy</a></li>
+                                <li><a class="dropdown-item" href="../html/indie.html">Indie</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white fw-bold" href="#" id="consolesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-controller"></i> Consoles
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="consolesDropdown">
+                                <li><a class="dropdown-item" href="html/pc.html">PC</a></li>
+                                <li><a class="dropdown-item" href="html/playstation.html">PlayStation</a></li>
+                                <li><a class="dropdown-item" href="html/xbox.html">Xbox</a></li>
+                                <li><a class="dropdown-item" href="html/switch.html">Switch</a></li>
+                                <li><a class="dropdown-item" href="html/mobile.html">Mobile</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-light" type="submit">Search</button>
+                    </form>
+                </div>
+            </nav>
     </header>
 
     <div class="main-wrapper">
