--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 
 <body class="bg-dark">
     <header>
+        
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
                 <div class="container d-flex justify-content-between align-items-center">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="/images/game-vault-header.png" alt="Game Vault Logo" class="img-fluid header-img">
+                    <a class="navbar-brand" href="../index.html">
+                        <img src="../images/game-vault-header.png" alt="Game Vault Logo" class="img-fluid header-img">
                     </a>
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item">
-                            <a class="nav-link active text-white fw-bold" href="index.html"><i class="bi bi-house-fill me-1"></i> Home</a>
+                            <a class="nav-link text-white fw-bold" href="html/../index.html"><i class="bi bi-house-fill me-1"></i> Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white fw-bold" href="#" id="categoriesDropdown"
@@ -35,6 +36,25 @@
                                 <li><a class="dropdown-item" href="html/rpg.html">RPG</a></li>
                                 <li><a class="dropdown-item" href="html/strategy.html">Strategy</a></li>
                                 <li><a class="dropdown-item" href="html/sports.html">Sports</a></li>
+                                <li><a class="dropdown-item" href="html/racing.html">Racing</a></li>
+                                <li><a class="dropdown-item" href="html/adventure.html">Adventure</a></li>
+                                <li><a class="dropdown-item" href="html/shooter.html">Shooter</a></li>
+                                <li><a class="dropdown-item" href="html/puzzle.html">Puzzle</a></li>
+                                <li><a class="dropdown-item" href="html/casual-party.html">Casual/Party</a></li>
+                                <li><a class="dropdown-item" href="html/simulation-strategy.html">Simulation/Strategy</a></li>
+                                <li><a class="dropdown-item" href="html/indie.html">Indie</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white fw-bold" href="#" id="consolesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-controller"></i> Consoles
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="consolesDropdown">
+                                <li><a class="dropdown-item" href="html/pc.html">PC</a></li>
+                                <li><a class="dropdown-item" href="html/playstation.html">PlayStation</a></li>
+                                <li><a class="dropdown-item" href="html/xbox.html">Xbox</a></li>
+                                <li><a class="dropdown-item" href="html/switch.html">Switch</a></li>
+                                <li><a class="dropdown-item" href="html/mobile.html">Mobile</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -91,8 +111,13 @@
             </div>
         </main>
 
-        <footer class="footer">
-            <p>&copy; 2025 Cas Website</p>
+        <footer class="footer mt-auto py-3 bg-dark text-white-50">
+            <div class="container">
+                <div class="text-center">
+                    <p class="mb-1">© 2025 Game Vault. All rights reserved.</p>
+                    <p class="small mb-0">A personal project by Cas</p>
+                </div>
+            </div>
         </footer>
 
     </div><!-- /.main-wrapper -->
