--- a/html/indie.html
+++ b/html/indie.html
@@ -69,10 +69,15 @@
             </div>
         </main>
 
-        <footer class="footer">
-            <p>&copy; 2025 Game Vault. All rights reserved.</p>
+        <footer class="footer mt-auto py-3 bg-dark text-white-50">
+            <div class="container">
+                <div class="text-center">
+                    <p class="mb-1">© 2025 Game Vault. All rights reserved.</p>
+                    <p class="small mb-0">A personal project by Cas</p>
+                </div>
+            </div>
         </footer>
-    </div>
+    </div><!-- /.main-wrapper -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/games.js"></script>
