--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
                 <div class="container d-flex justify-content-between align-items-center">
                     <a class="navbar-brand" href="../index.html">
-                        <img src="../images/game-vault-header.png" alt="Game Vault Logo" class="img-fluid header-img">
+                        <img src="/images/game-vault-header.png" alt="Game Vault Logo" class="img-fluid header-img">
                     </a>
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item">
