Created more categories and games with those categories

--- a/html/action.html
+++ b/html/action.html
@@ -31,17 +31,25 @@
                                 <i class="bi bi-list-task"></i> Categories
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="categoriesDropdown">
-                                <li><a class="dropdown-item" href="../html/action.html">Action</a></li>
-                                <li><a class="dropdown-item" href="../html/rpg.html">RPG</a></li>
-                                <li><a class="dropdown-item" href="../html/strategy.html">Strategy</a></li>
-                                <li><a class="dropdown-item" href="../html/sports.html">Sports</a></li>
-                                <li><a class="dropdown-item" href="../html/racing.html">Racing</a></li>
+                                <li><a class="dropdown-item active" href="../html/action.html">Action</a></li>
                                 <li><a class="dropdown-item" href="../html/adventure.html">Adventure</a></li>
-                                <li><a class="dropdown-item" href="../html/shooter.html">Shooter</a></li>
-                                <li><a class="dropdown-item" href="../html/puzzle.html">Puzzle</a></li>
+                                <li><a class="dropdown-item" href="../html/battle-royale.html">Battle Royale</a></li>
                                 <li><a class="dropdown-item" href="../html/casual-party.html">Casual/Party</a></li>
-                                <li><a class="dropdown-item" href="../html/simulation-strategy.html">Simulation/Strategy</a></li>
+                                <li><a class="dropdown-item" href="../html/fighting.html">Fighting</a></li>
                                 <li><a class="dropdown-item" href="../html/indie.html">Indie</a></li>
+                                <li><a class="dropdown-item" href="../html/metroidvania.html">Metroidvania</a></li>
+                                <li><a class="dropdown-item" href="../html/mmorpg.html">MMORPG</a></li>
+                                <li><a class="dropdown-item" href="../html/puzzle.html">Puzzle</a></li>
+                                <li><a class="dropdown-item" href="../html/racing.html">Racing</a></li>
+                                <li><a class="dropdown-item" href="../html/rhythm-music.html">Rhythm/Music</a></li>
+                                <li><a class="dropdown-item" href="../html/roguelike.html">Roguelike/Roguelite</a></li>
+                                <li><a class="dropdown-item" href="../html/rpg.html">RPG</a></li>
+                                <li><a class="dropdown-item" href="../html/shooter.html">Shooter</a></li>
+                                <li><a class="dropdown-item" href="../html/simulation-strategy.html">Simulation/Strategy</a></li>
+                                <li><a class="dropdown-item" href="../html/sports.html">Sports</a></li>
+                                <li><a class="dropdown-item" href="../html/strategy.html">Strategy</a></li>
+                                <li><a class="dropdown-item" href="../html/survival-horror.html">Survival/Horror</a></li>
+                                <li><a class="dropdown-item" href="../html/visual-novels.html">Visual Novels</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
