--- a/index.html
+++ b/index.html
@@ -33,16 +33,40 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="categoriesDropdown">
                                 <li><a class="dropdown-item" href="html/action.html">Action</a></li>
-                                <li><a class="dropdown-item" href="html/rpg.html">RPG</a></li>
-                                <li><a class="dropdown-item" href="html/strategy.html">Strategy</a></li>
-                                <li><a class="dropdown-item" href="html/sports.html">Sports</a></li>
-                                <li><a class="dropdown-item" href="html/racing.html">Racing</a></li>
                                 <li><a class="dropdown-item" href="html/adventure.html">Adventure</a></li>
-                                <li><a class="dropdown-item" href="html/shooter.html">Shooter</a></li>
-                                <li><a class="dropdown-item" href="html/puzzle.html">Puzzle</a></li>
+                                <li><a class="dropdown-item" href="html/battle-royale.html">Battle Royale</a></li>
                                 <li><a class="dropdown-item" href="html/casual-party.html">Casual/Party</a></li>
-                                <li><a class="dropdown-item" href="html/simulation-strategy.html">Simulation/Strategy</a></li>
+                                <li><a class="dropdown-item" href="html/fighting.html">Fighting</a></li>
                                 <li><a class="dropdown-item" href="html/indie.html">Indie</a></li>
+                                <li><a class="dropdown-item" href="html/metroidvania.html">Metroidvania</a></li>
+                                <li><a class="dropdown-item" href="html/mmorpg.html">MMORPG</a></li>
+                                <li><a class="dropdown-item" href="html/puzzle.html">Puzzle</a></li>
+                                <li><a class="dropdown-item" href="html/racing.html">Racing</a></li>
+                                <li><a class="dropdown-item" href="html/rhythm-music.html">Rhythm/Music</a></li>
+                                <li><a class="dropdown-item" href="html/roguelike.html">Roguelike/Roguelite</a></li>
+                                <li><a class="dropdown-item" href="html/rpg.html">RPG</a></li>
+                                <li><a class="dropdown-item" href="html/shooter.html">Shooter</a></li>
+                                <li><a class="dropdown-item" href="html/simulation-strategy.html">Simulation/Strategy</a></li>
+                                <li><a class="dropdown-item" href="html/sports.html">Sports</a></li>
+                                <li><a class="dropdown-item" href="html/strategy.html">Strategy</a></li>
+                                <li><a class="dropdown-item" href="html/survival-horror.html">Survival/Horror</a></li>
+                                <li><a class="dropdown-item" href="html/visual-novels.html">Visual Novels</a></li>
+                                <li><a class="dropdown-item" href="html/arcade.html">Arcade</a></li>
+                                <li><a class="dropdown-item" href="html/board-game.html">Board Game</a></li>
+                                <li><a class="dropdown-item" href="html/card-game.html">Card Game</a></li>
+                                <li><a class="dropdown-item" href="html/educational.html">Educational</a></li>
+                                <li><a class="dropdown-item" href="html/family-friendly.html">Family-Friendly</a></li>
+                                <li><a class="dropdown-item" href="html/fantasy.html">Fantasy</a></li>
+                                <li><a class="dropdown-item" href="html/historical.html">Historical</a></li>
+                                <li><a class="dropdown-item" href="html/horror.html">Horror</a></li>
+                                <li><a class="dropdown-item" href="html/multiplayer.html">Multiplayer</a></li>
+                                <li><a class="dropdown-item" href="html/open-world.html">Open-World</a></li>
+                                <li><a class="dropdown-item" href="html/platformer.html">Platformer</a></li>
+                                <li><a class="dropdown-item" href="html/sci-fi.html">Sci-Fi</a></li>
+                                <li><a class="dropdown-item" href="html/simulation.html">Simulation</a></li>
+                                <li><a class="dropdown-item" href="html/sports-management.html">Sports Management</a></li>
+                                <li><a class="dropdown-item" href="html/stealth.html">Stealth</a></li>
+                                <li><a class="dropdown-item" href="html/tower-defense.html">Tower Defense</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -50,11 +74,13 @@
                                 <i class="bi bi-controller"></i> Consoles
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="consolesDropdown">
-                                <li><a class="dropdown-item" href="html/pc.html">PC</a></li>
-                                <li><a class="dropdown-item" href="html/playstation.html">PlayStation</a></li>
-                                <li><a class="dropdown-item" href="html/xbox.html">Xbox</a></li>
-                                <li><a class="dropdown-item" href="html/switch.html">Switch</a></li>
-                                <li><a class="dropdown-item" href="html/mobile.html">Mobile</a></li>
+                                <li><a class="dropdown-item" href="html/pc.html">PC (Windows)</a></li>
+                                <li><a class="dropdown-item" href="html/playstation5.html">PlayStation 5</a></li>
+                                <li><a class="dropdown-item" href="html/xbox-series.html">Xbox Series X|S</a></li>
+                                <li><a class="dropdown-item" href="html/nintendo-switch.html">Nintendo Switch</a></li>
+                                <li><a class="dropdown-item" href="html/mobile.html">Mobile (iOS/Android)</a></li>
+                                <li><a class="dropdown-item" href="html/vr-ar.html">VR/AR</a></li>
+                                <li><a class="dropdown-item" href="html/cloud-gaming.html">Cloud Gaming</a></li>
                             </ul>
                         </li>
                     </ul>
