Updated nav linking

--- a/html/adventure.html
+++ b/html/adventure.html
@@ -28,18 +28,26 @@
                                 <i class="bi bi-list-task"></i> Categories
                             </a>
                              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="categoriesDropdown">
-                                <li><a class="dropdown-item" href="../html/action.html">Action</a></li>
-                                <li><a class="dropdown-item" href="../html/rpg.html">RPG</a></li>
-                                <li><a class="dropdown-item" href="../html/strategy.html">Strategy</a></li>
-                                <li><a class="dropdown-item" href="../html/sports.html">Sports</a></li>
-                                <li><a class="dropdown-item" href="../html/racing.html">Racing</a></li>
-                                <li><a class="dropdown-item" href="../html/adventure.html">Adventure</a></li>
-                                <li><a class="dropdown-item" href="../html/shooter.html">Shooter</a></li>
-                                <li><a class="dropdown-item" href="../html/puzzle.html">Puzzle</a></li>
-                                <li><a class="dropdown-item" href="../html/casual-party.html">Casual/Party</a></li>
-                                <li><a class="dropdown-item" href="../html/simulation-strategy.html">Simulation/Strategy</a></li>
-                                <li><a class="dropdown-item" href="../html/indie.html">Indie</a></li>
-                            </ul>
+        <li><a class="dropdown-item" href="action.html">Action</a></li>
+        <li><a class="dropdown-item active" href="adventure.html">Adventure</a></li>
+        <li><a class="dropdown-item" href="battle-royale.html">Battle Royale</a></li>
+        <li><a class="dropdown-item" href="casual-party.html">Casual/Party</a></li>
+        <li><a class="dropdown-item" href="fighting.html">Fighting</a></li>
+        <li><a class="dropdown-item" href="indie.html">Indie</a></li>
+        <li><a class="dropdown-item" href="metroidvania.html">Metroidvania</a></li>
+        <li><a class="dropdown-item" href="mmorpg.html">MMORPG</a></li>
+        <li><a class="dropdown-item" href="puzzle.html">Puzzle</a></li>
+        <li><a class="dropdown-item" href="racing.html">Racing</a></li>
+        <li><a class="dropdown-item" href="rhythm-music.html">Rhythm/Music</a></li>
+        <li><a class="dropdown-item" href="roguelike.html">Roguelike/Roguelite</a></li>
+        <li><a class="dropdown-item" href="rpg.html">RPG</a></li>
+        <li><a class="dropdown-item" href="shooter.html">Shooter</a></li>
+        <li><a class="dropdown-item" href="simulation-strategy.html">Simulation/Strategy</a></li>
+        <li><a class="dropdown-item" href="sports.html">Sports</a></li>
+        <li><a class="dropdown-item" href="strategy.html">Strategy</a></li>
+        <li><a class="dropdown-item" href="survival-horror.html">Survival/Horror</a></li>
+        <li><a class="dropdown-item" href="visual-novels.html">Visual Novels</a></li>
+      </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white fw-bold" href="#" id="consolesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
