--- a/html/shooter.html
+++ b/html/shooter.html
@@ -27,25 +27,25 @@
                                 <i class="bi bi-list-task"></i> Categories
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="categoriesDropdown">
-        <li><a class="dropdown-item" href="action.html">Action</a></li>
-        <li><a class="dropdown-item" href="adventure.html">Adventure</a></li>
-        <li><a class="dropdown-item" href="battle-royale.html">Battle Royale</a></li>
-        <li><a class="dropdown-item" href="casual-party.html">Casual/Party</a></li>
-        <li><a class="dropdown-item" href="fighting.html">Fighting</a></li>
-        <li><a class="dropdown-item" href="indie.html">Indie</a></li>
-        <li><a class="dropdown-item" href="metroidvania.html">Metroidvania</a></li>
-        <li><a class="dropdown-item" href="mmorpg.html">MMORPG</a></li>
-        <li><a class="dropdown-item" href="puzzle.html">Puzzle</a></li>
-        <li><a class="dropdown-item" href="racing.html">Racing</a></li>
-        <li><a class="dropdown-item" href="rhythm-music.html">Rhythm/Music</a></li>
-        <li><a class="dropdown-item" href="roguelike.html">Roguelike/Roguelite</a></li>
-        <li><a class="dropdown-item" href="rpg.html">RPG</a></li>
-        <li><a class="dropdown-item active" href="shooter.html">Shooter</a></li>
-        <li><a class="dropdown-item" href="simulation-strategy.html">Simulation/Strategy</a></li>
-        <li><a class="dropdown-item" href="sports.html">Sports</a></li>
-        <li><a class="dropdown-item" href="strategy.html">Strategy</a></li>
-        <li><a class="dropdown-item" href="survival-horror.html">Survival/Horror</a></li>
-        <li><a class="dropdown-item" href="visual-novels.html">Visual Novels</a></li>
+        <li><a class="dropdown-item" href="../html/action.html">Action</a></li>
+        <li><a class="dropdown-item" href="../html/adventure.html">Adventure</a></li>
+        <li><a class="dropdown-item" href="../html/battle-royale.html">Battle Royale</a></li>
+        <li><a class="dropdown-item" href="../html/casual-party.html">Casual/Party</a></li>
+        <li><a class="dropdown-item" href="../html/fighting.html">Fighting</a></li>
+        <li><a class="dropdown-item" href="../html/indie.html">Indie</a></li>
+        <li><a class="dropdown-item" href="../html/metroidvania.html">Metroidvania</a></li>
+        <li><a class="dropdown-item" href="../html/mmorpg.html">MMORPG</a></li>
+        <li><a class="dropdown-item" href="../html/puzzle.html">Puzzle</a></li>
+        <li><a class="dropdown-item" href="../html/racing.html">Racing</a></li>
+        <li><a class="dropdown-item" href="../html/rhythm-music.html">Rhythm/Music</a></li>
+        <li><a class="dropdown-item" href="../html/roguelike.html">Roguelike/Roguelite</a></li>
+        <li><a class="dropdown-item" href="../html/rpg.html">RPG</a></li>
+        <li><a class="dropdown-item active" href="../html/shooter.html">Shooter</a></li>
+        <li><a class="dropdown-item" href="../html/simulation-strategy.html">Simulation/Strategy</a></li>
+        <li><a class="dropdown-item" href="../html/sports.html">Sports</a></li>
+        <li><a class="dropdown-item" href="../html/strategy.html">Strategy</a></li>
+        <li><a class="dropdown-item" href="../html/survival-horror.html">Survival/Horror</a></li>
+        <li><a class="dropdown-item" href="../html/visual-novels.html">Visual Novels</a></li>
       </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -53,12 +53,14 @@
                                 <i class="bi bi-controller"></i> Consoles
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="consolesDropdown">
-                                <li><a class="dropdown-item" href="html/pc.html">PC</a></li>
-                                <li><a class="dropdown-item" href="html/playstation.html">PlayStation</a></li>
-                                <li><a class="dropdown-item" href="html/xbox.html">Xbox</a></li>
-                                <li><a class="dropdown-item" href="html/switch.html">Switch</a></li>
-                                <li><a class="dropdown-item" href="html/mobile.html">Mobile</a></li>
-                            </ul>
+        <li><a class="dropdown-item" href="../html/pc.html">PC (Windows)</a></li>
+        <li><a class="dropdown-item" href="../html/playstation5.html">PlayStation 5</a></li>
+        <li><a class="dropdown-item" href="../html/xbox-series.html">Xbox Series X|S</a></li>
+        <li><a class="dropdown-item" href="../html/switch.html">Nintendo Switch</a></li>
+        <li><a class="dropdown-item" href="../html/mobile.html">Mobile (iOS/Android)</a></li>
+        <li><a class="dropdown-item" href="../html/vr-ar.html">VR/AR</a></li>
+        <li><a class="dropdown-item" href="../html/cloud-gaming.html">Cloud Gaming</a></li>
+      </ul>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
