--- a/html/fighting.html
+++ b/html/fighting.html
@@ -14,7 +14,7 @@
     <script>window.CATEGORY = 'Fighting';</script>
 </head>
 
-<body class="bg-dark">
+<body class="bg-dark categories-page">
     <header>
         
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -89,19 +89,19 @@
         </div>
 
         
-<footer class="footer mt-auto py-3 bg-dark text-white-50">
-    <div class="container">
-        <div class="text-center">
-            <p class="mb-1">© 2025 Game Vault. All rights reserved.</p>
-            <p class="small mb-0">A personal project by Cas</p>
-        </div>
-    </div>
-</footer>
+        <footer class="footer mt-auto py-3 bg-dark text-white-50">
+            <div class="container">
+                <div class="text-center">
+                    <p class="mb-1">© 2025 Game Vault. All rights reserved.</p>
+                    <p class="small mb-0">A personal project by Cas</p>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/games.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="../js/game-loader.js"></script>
 </body>
 
 </html>
