--- a/html/visual-novels.html
+++ b/html/visual-novels.html
@@ -14,7 +14,7 @@
     <script>window.CATEGORY = 'Visual Novels';</script>
 </head>
 
-<body class="bg-dark">
+<body class="bg-dark categories-page">
     <header>
         
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -88,43 +88,19 @@
         </div>
 
         
-<footer class="bg-dark text-white py-4 mt-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h5>About Game Vault</h5>
-                <p>Your ultimate destination for discovering and exploring the best games across all platforms and genres.</p>
-            </div>
-            <div class="col-md-3">
-                <h5>Quick Links</h5>
-                <ul class="list-unstyled">
-                    <li><a href="../index.html" class="text-white">Home</a></li>
-                    <li><a href="#" class="text-white">All Games</a></li>
-                    <li><a href="#" class="text-white">New Releases</a></li>
-                    <li><a href="#" class="text-white">Top Rated</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3">
-                <h5>Follow Us</h5>
-                <div class="social-links">
-                    <a href="#" class="text-white me-2"><i class="bi bi-twitter"></i></a>
-                    <a href="#" class="text-white me-2"><i class="bi bi-facebook"></i></a>
-                    <a href="#" class="text-white me-2"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="text-white me-2"><i class="bi bi-youtube"></i></a>
+        <footer class="footer mt-auto py-3 bg-dark text-white-50">
+            <div class="container">
+                <div class="text-center">
+                    <p class="mb-1">© 2025 Game Vault. All rights reserved.</p>
+                    <p class="small mb-0">A personal project by Cas</p>
                 </div>
             </div>
-        </div>
-        <hr class="my-4">
-        <div class="text-center">
-            <p class="mb-0">&copy; 2023 Game Vault. All rights reserved.</p>
-        </div>
-    </div>
-</footer>
+        </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/games.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="../js/game-loader.js"></script>
 </body>
 
 </html>
