--- a/html/vr-ar.html
+++ b/html/vr-ar.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Games - Game Vault</title>
+    <title>VR/AR Games - Game Vault</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <script>window.CATEGORY = 'Mobile';</script>
+    <script>window.CATEGORY = 'VR/AR';</script>
 </head>
 
 <body class="bg-dark platforms-page">
@@ -61,8 +61,8 @@
                             <li><a class="dropdown-item" href="playstation.html">PlayStation</a></li>
                             <li><a class="dropdown-item" href="xbox.html">Xbox</a></li>
                             <li><a class="dropdown-item" href="switch.html">Nintendo Switch</a></li>
-                            <li><a class="dropdown-item active" href="mobile.html">Mobile (iOS/Android)</a></li>
-                            <li><a class="dropdown-item" href="vr-ar.html">VR/AR</a></li>
+                            <li><a class="dropdown-item" href="mobile.html">Mobile (iOS/Android)</a></li>
+                            <li><a class="dropdown-item active" href="vr-ar.html">VR/AR</a></li>
                             <li><a class="dropdown-item" href="cloud-gaming.html">Cloud Gaming</a></li>
                         </ul>
                     </li>
@@ -79,7 +79,7 @@
         <div class="container mt-5 pt-4">
             <div class="row mb-4">
                 <div class="col-12">
-                    <h1 class="text-white mb-4">Mobile Games</h1>
+                    <h1 class="text-white mb-4">VR/AR Games</h1>
                     <div class="row g-4" id="games-container">
                         <!-- Games will be loaded dynamically -->
                     </div>
