--- a/html/roguelike.html
+++ b/html/roguelike.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <script>window.CATEGORY = 'Roguelike';</script>
+    <script>window.CATEGORY = 'Roguelike/Roguelite';</script>
 </head>
 
 <body class="bg-dark categories-page">
@@ -48,7 +48,6 @@
                     <li><a class="dropdown-item" href="shooter.html">Shooter</a></li>
                     <li><a class="dropdown-item" href="simulation-strategy.html">Simulation/Strategy</a></li>
                     <li><a class="dropdown-item" href="sports.html">Sports</a></li>
-                    <li><a class="dropdown-item" href="strategy.html">Strategy</a></li>
                     <li><a class="dropdown-item" href="survival-horror.html">Survival/Horror</a></li>
                     <li><a class="dropdown-item" href="visual-novels.html">Visual Novels</a></li>
                 </ul>
