--- a/html/visual-novels.html
+++ b/html/visual-novels.html
@@ -48,9 +48,8 @@
                     <li><a class="dropdown-item" href="shooter.html">Shooter</a></li>
                     <li><a class="dropdown-item" href="simulation-strategy.html">Simulation/Strategy</a></li>
                     <li><a class="dropdown-item" href="sports.html">Sports</a></li>
-                    <li><a class="dropdown-item" href="strategy.html">Strategy</a></li>
                     <li><a class="dropdown-item" href="survival-horror.html">Survival/Horror</a></li>
-                    <li><a class="dropdown-item" href="visual-novels.html">Visual Novels</a></li>
+                    <li><a class="dropdown-item active" href="visual-novels.html">Visual Novels</a></li>
                 </ul>
             </li>
             <li class="nav-item dropdown">
