--- a/html/visual-novels.html
+++ b/html/visual-novels.html
@@ -53,21 +53,22 @@
                 </ul>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-white fw-bold" href="#" id="platformsDropdown"
-                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-controller"></i> Platforms
+                <a class="nav-link dropdown-toggle text-white fw-bold" href="#" id="consolesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-controller"></i> Consoles
                 </a>
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="platformsDropdown">
-                    <li><a class="dropdown-item" href="nintendo-switch.html">Nintendo Switch</a></li>
-                    <li><a class="dropdown-item" href="playstation-5.html">PlayStation 5</a></li>
-                    <li><a class="dropdown-item" href="xbox-series-xs.html">Xbox Series X|S</a></li>
-                    <li><a class="dropdown-item" href="pc.html">PC</a></li>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="consolesDropdown">
+                    <li><a class="dropdown-item" href="pc.html">PC (Windows)</a></li>
+                    <li><a class="dropdown-item" href="playstation5.html">PlayStation 5</a></li>
+                    <li><a class="dropdown-item" href="xbox-series.html">Xbox Series X|S</a></li>
+                    <li><a class="dropdown-item" href="switch.html">Nintendo Switch</a></li>
+                    <li><a class="dropdown-item" href="mobile.html">Mobile (iOS/Android)</a></li>
                     <li><a class="dropdown-item" href="vr-ar.html">VR/AR</a></li>
+                    <li><a class="dropdown-item" href="cloud-gaming.html">Cloud Gaming</a></li>
                 </ul>
             </li>
         </ul>
-        <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search games..." aria-label="Search">
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-light" type="submit">Search</button>
         </form>
     </div>
