--- a/index.html
+++ b/index.html
@@ -134,13 +134,10 @@
         </footer>
     </div><!-- /.main-wrapper -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/games.js"></script>
-    <script src="js/game-loader.js"></script>
     <script src="js/search.js"></script>
-    <script src="js/navbar-scroll.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
