--- a/html/mobile.html
+++ b/html/mobile.html
@@ -58,7 +58,7 @@
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="consolesDropdown">
                             <li><a class="dropdown-item" href="pc.html">PC (Windows)</a></li>
                             <li><a class="dropdown-item" href="playstation.html">PlayStation</a></li>
-                            <li><a class="dropdown-item" href="xbox.html">Xbox</a></li>
+                            <li><a class="dropdown-item" href="xbox-series.html">Xbox Series X|S</a></li>
                             <li><a class="dropdown-item" href="switch.html">Nintendo Switch</a></li>
                             <li><a class="dropdown-item active" href="mobile.html">Mobile (iOS/Android)</a></li>
                             <li><a class="dropdown-item" href="vr-ar.html">VR/AR</a></li>
