--- a/html/pc.html
+++ b/html/pc.html
@@ -58,7 +58,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="consolesDropdown">
                     <li><a class="dropdown-item active" href="pc.html">PC (Windows)</a></li>
-                    <li><a class="dropdown-item" href="playstation5.html">PlayStation 5</a></li>
+                    <li><a class="dropdown-item" href="playstation.html">PlayStation</a></li>
                     <li><a class="dropdown-item" href="xbox-series.html">Xbox Series X|S</a></li>
                     <li><a class="dropdown-item" href="switch.html">Nintendo Switch</a></li>
                     <li><a class="dropdown-item" href="mobile.html">Mobile (iOS/Android)</a></li>
