--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
     </div><!-- /.main-wrapper -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="js/games.js"></script>
     <script src="js/search.js"></script>
     <script src="js/script.js"></script>
