--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <button class="dropdown-toggle">Consoles <i class="bi bi-chevron-down"></i></button>
             <ul class="dropdown-list">
               <li><a href="html/pc.html">PC (Windows)</a></li>
-              <li><a href="html/playstation5.html">PlayStation 5</a></li>
+              <li><a href="html/playstation.html">PlayStation</a></li>
               <li><a href="html/xbox-series.html">Xbox Series X|S</a></li>
               <li><a href="html/switch.html">Nintendo Switch</a></li>
               <li><a href="html/mobile.html">Mobile (iOS/Android)</a></li>
@@ -118,7 +118,7 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="consolesDropdown">
         <li><a class="dropdown-item" href="html/pc.html">PC (Windows)</a></li>
-        <li><a class="dropdown-item" href="html/playstation5.html">PlayStation 5</a></li>
+        <li><a class="dropdown-item" href="html/playstation.html">PlayStation</a></li>
         <li><a class="dropdown-item" href="html/xbox-series.html">Xbox Series X|S</a></li>
         <li><a class="dropdown-item" href="html/switch.html">Nintendo Switch</a></li>
         <li><a class="dropdown-item" href="html/mobile.html">Mobile (iOS/Android)</a></li>
