--- a/html/pc.html
+++ b/html/pc.html
@@ -99,6 +99,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="../js/games.js"></script>
     <script src="../js/game-loader.js"></script>
 </body>
